# Smartops-ai-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  config.py  logging_utils.py  simulator.py
models/: __init__.py  openenv.py
openenv_smartops_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  app.py  environment.py
tasks/: __init__.py  catalog.py  graders.py
