[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-smartops-ai"
version = "0.1.0"
description = "SmartOps AI - Autonomous Customer Support & Ticket Resolution Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "uvicorn>=0.29.0",
    "fastapi>=0.110.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
server = "smartops_ai_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "smartops_ai_env",
    "smartops_ai_env.env",
    "smartops_ai_env.models",
    "smartops_ai_env.server",
    "smartops_ai_env.tasks",
]
package-dir = { "smartops_ai_env" = ".", "smartops_ai_env.env" = "env", "smartops_ai_env.models" = "models", "smartops_ai_env.server" = "server", "smartops_ai_env.tasks" = "tasks" }
